*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -278,6 +278,8 @@ Bakambi-Bulamatari :
 * [[Category:Afrika]] 
 * [[Category:Bisé ya Afrika]] 
 * [[Category:Bisé]]
+* [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+* [[Category:Kongo Kinshasa]]
 <br clear="all"/>
 
 == [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] ==
@@ -294,8 +296,6 @@ Bakambi-Bulamatari :
 * [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
 <br clear="all"/>
 {{Pays d'Afrique}}
-
-[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[bn:&#2453;&#2457;&#2509;&#2455;&#2507; (&#2460;&#2494;&#2479;&#2492;&#2494;&#2480;)]]
 [[da:Demokratiske Republik Congo]]
