--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -286,7 +286,7 @@ Bakambi-Bulamatari :
 {{wikitravel|la République démocratique du Congo|République_démocratique_du_Congo}}
 * [http://www.stiopka.com/congoclic/congoclic.html Carte du Congo (1958)]
 * [http://www.amnestyinternational.be/doc/rubrique44.html Informations d'Amnesty International]
-* [http://www.rdc.cd/ Site du Gouvernement]
+* [http://www.presidentrdc.cd/ Site du Gouvernement]
 * [http://www.chez.com/rdcembassy/ Site de l'ambassade à Bruxelles]
 * [http://www.minfinrdc.cd/ Site du Ministère des Finances]
 * [http://www.bcc.cd/ Site de la Banque Centrale du Congo]
