--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -253,10 +253,10 @@ Bakambi-Bulamatari :
 *[[République démocratique du Congo, données chiffrées|Données chiffrées]]
 *[[Forces française hors de la métropole]]
 
-==Voir aussi==
+==Tala mpe==
 {{Commons|Category:Democratic Republic of the Congo|la République démocratique du Congo}}
 * [[Pays du monde]]
-* [[Afrique]]
+* [[Afrika]]
 * [[Santé en République démocratique du Congo]]
 * [[Category:Afrika]] 
 * [[Category:Bisé ya Afrika]] 
