--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -184,13 +184,13 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 == Politiki bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
 ''Article détaillé : [[Politiki bya Kongo Kinshasa]]''
 
-Bakambi-Ekolo :
+Bakambi Ekolo :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
 * [[1965]] - [[1997]] [[Mobutu Sese Seko]]
 * [[1997]] - [[2001]] [[Laurent-Désiré Kabila]]
 * [[2001]] - auj. [[Joseph Kabila]]
 
-Bakambi-Bulamatari :
+Bakambi Bulamatari :
 * [[1960]] - 1960     [[Patrice Lumumba]]
 * [[1961]] - 1961     [[Joseph Iléo]]
 * [[1961]] - [[1964]] [[Cyrille Adoula]]
@@ -216,8 +216,6 @@ Bakambi-Bulamatari :
 * [[1994]] - [[1997]] [[Kengo Wa Dondo]]
 * [[1997]] - 1997     [[Étienne Tshisekedi]]
 * [[1997]] - 1997     [[Likulia Bolongo]]
-
-
 
 == Géographie ==
 [[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Cartes des principales langues Bantoues en République démocratique du Congo]]
