--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -182,7 +182,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
 == Politiki bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
-''Article détaillé : [[Politiki bya Kongo Kinshasa]]''
+''Article ya molayi : [[Politiki bya Kongo Kinshasa]]''
 
 Bakambi Ekolo :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
