--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -229,7 +229,7 @@ Bakambi Bulamatari :
 ''Voir aussi : [[Coltan]]''
 
 == Culture ==
-''Article ya molayi : [[Kiltiri ya Repubiliki ya Kɔ́ngɔ Demokratiki]]''
+''Article ya molayi : [[Kiltiri ya Kongo Kinshasa]]''
 
 {{entête tableau charte}}
 |+ '''Fêtes et jours fériés'''
