*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
-| align="center" width="140px" | [[Image:Congo_democratic_flag_300.png|140px]]
+| align="center" width="140px" | [[Image:Congo_democratic_flag_300.png|140px]]|[[Image:ArmsDRCbig.gif|140px]]|
 |-----
 | align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])
 |}
