*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -6,7 +6,7 @@
 |-----
 | align="center" width="285px" | [[Image:Congo_democratic_flag_300.png|140px]][[Image:ArmsDRCbig.gif|140px]]|
 |-----
-| align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails|140px]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails|140px]])
+| align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
 | align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Jistisi - Bosangani''</font>
