*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -2,5 +2,5 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Joseph kasa-vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
-Tata-mokonzi 01 07 1960 - 24 11 1965
-(son premier ministre était [[Patrice Lumumba]])
+Mokambi Ekolo 01 07 1960 - 24 11 1965
+(Mokambi Bulamatari naye azalaki [[Patrice Lumumba]])
