--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -1,6 +1,6 @@
 {{ndámbo}}
 
-'''Patrice Émery Lumumba''', Moyángeli mwa yambo ya Kɔ́ngɔ, abótámí o mobú 1925 mpé akúfí o Katanga o mobú 1961.
+'''Patrice Émery Lumumba''', Moyángeli mwa yambo ya Bulamatari o Kɔ́ngɔ-Kinshasa, abótámí o mobú 1925 mpé akúfí o Katanga o mobú 1961.
 
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Patrice lumumba.jpg|thumb|Patrice E. Lumumba]]
