*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,4 +1,4 @@
-* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, ex République populaire du Congo, ex Congo français)
+* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, ex République populaire du Congo, ex Kongo ya Falansia)
 * [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, ex Zaïre, ex Kongo belji, ex Ekolo ya Kongo ya Bonsomi)
 * [[Kɔ́ngɔ (ebale)]]
 
