--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -228,7 +228,7 @@ Bakambi Bulamatari :
 
 ''Voir aussi : [[Coltan]]''
 
-== Culture ==
+== Kiltiri ==
 ''Article ya molayi : [[Kiltiri ya Kongo Kinshasa]]''
 
 {{entête tableau charte}}
