--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -233,13 +233,13 @@ Bakambi Bulamatari :
 
 {{entête tableau charte}}
 |+ '''Fêtes et jours fériés'''
-! Date !! {{nwt|Nom français}} !! {{nwt|Nom local}} !! Remarques
+! Date !! {{nwt|Nkombo na lifalansé}} !! {{nwt|Nkombo na lingala}} !! Remarques
 |-
 | [[4 janvier]] || journée des Martyrs de l'indépendance || ||
 |- {{ligne grise}}
 | [[17 janvier]] ||journée du Héros National et de ses compagnons d'infortune || ||
 |-----
-| [[30 juin]] || date anniversaire de l'indépendance || ||
+| [[30 juin]] || date anniversaire de l'indépendance || Mukolo ya Lipanda ||
 |- {{ligne grise}}
 | [[16 février]] || journée des Martyrs de la Démocratie || ||
 |-----
