--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -232,7 +232,7 @@ Bakambi Bulamatari :
 ''Article ya molayi : [[Kiltiri ya Kongo Kinshasa]]''
 
 {{entête tableau charte}}
-|+ '''Fêtes et jours fériés'''
+|+ '''Bafeti mpe Mikolo ya bopemi'''
 ! Date !! {{nwt|Nkombo na lifalansé}} !! {{nwt|Nkombo na lingala}} !! Remarques
 |-
 | [[4 janvier]] || journée des Martyrs de l'indépendance || ||
@@ -241,7 +241,7 @@ Bakambi Bulamatari :
 |-----
 | [[30 juin]] || date anniversaire de l'indépendance || Mukolo ya Lipanda ||
 |- {{ligne grise}}
-| [[16 février]] || journée des Martyrs de la Démocratie || ||
+| [[16 février]] || journée des Martyrs de la Démocratie || Mokolo ya baye bakufa pona [[demokrasi]] ||
 |-----
 | [[17 mai]] || date anniversaire de la libération du Peuple de la tyrannie || ||
 |}
