--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -218,10 +218,10 @@ Bakambi Bulamatari :
 * [[1997]] - 1997     [[Likulia Bolongo]]
 
 == Géographie ==
-[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Cartes des principales langues Bantoues en République démocratique du Congo]]
+[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Bakarta ya Nkota makonzi ya Babantu oyo makutahi o Ekolo Kɔ́ngɔ]]
 
 ''Article détaillé : [[Géographie de la République démocratique du Congo]]''
-* Voir aussi : [[Forêt du Bassin du Congo]] | [[Liste des villes de la République démocratique du Congo]]
+* Tala mpe : [[Zamba o Bassin ya ebale Kɔ́ngɔ]] | [[Liste des villes de la République démocratique du Congo]]
 
 == Économie ==
 ''Article détaillé : [[Économie de la République démocratique du Congo]]''
