*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -2,7 +2,7 @@
 
 {{ndambo}}
 
-'''Ciluba''' (tchiluba,  Tshiluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
+'''Ciluba''' (tchiluba,  Tshiluba) ezali [[lokótá]] na bato na kati-kati ya [[Kongo-Kinshasa|Kongo]].
 
 
 
