--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -7,7 +7,7 @@
 
 
 
-== Liens ==
+== Makasa-web olibanda Wikipedia ==
 * Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
 
 
