*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -26,3 +26,6 @@ Comment améliorer un article sur une langue?
 ----
                                                                                  
 [[Category:Lokótá]]
+
+
+[[fr:tshiluba]]
