/* Makasa-web olibanda Wikipedia */

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -95,7 +95,14 @@ Some short examples of the language in the writing system(s) used to write the l
 
 == Makasa-web olibanda Wikipedia ==
 * Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
+* [http://www.ethnologue.com/show_language.asp?code=LUB Ethnologue report on Tshiluba]
+* [http://news.bbc.co.uk/2/hi/africa/3830521.stm BBC News: Congo word "most untranslatable"]
 
+
+{{nc-lang-stub}}
+
+[[Category:Bantu languages]]
+[[Category:Nkotá ya Kongo Kinshasa]]
 
 
 
