/* Makasa-web olibanda Wikipedia */

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -101,7 +101,7 @@ Some short examples of the language in the writing system(s) used to write the l
 
 {{nc-lang-stub}}
 
-[[Category:Bantu languages]]
+[[Category:Nkotá ya Babantu]]
 [[Category:Nkotá ya Kongo Kinshasa]]
 
 
