*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -22,3 +22,4 @@ Comment améliorer un article sur une langue?
 >> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
 ----
 [[Category:Lokótá]]
+[[Category:bandambo ya Nkota ya Nijer-Kongo]]
