--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -55,10 +55,10 @@ Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama 
 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
 
-== Histoire ==
+== Historia ==
 ''Article détaillé : [[Historia ya Kongo-Kinshasa]]''
 
-''Tala mpe: [[Ekolo ya Bonsomi ya Kongo]]''
+''Tala mpe: [[Kongó (ntangó ya banɔ́kɔ́)]]''
 
 Dès les années 40, dans ce qui était alors le [[Congo belge]], deux tendances indépendantistes importantes se manifestaient dans la capitale [[Kinshasa|Léopoldville]] : celle des « gens d'en bas » ([[Bas-Congo]] et [[Bandundu]]) parlant le [[kikongo]] et celle des « gens d'en haut » parlant le [[lingala]], venant de l'[[Équateur (province)|Équateur]] d'abord et finalement de tout l'intérieur du pays. Dans la première catégorie se forma en [[1949]] une association d'abord culturelle et finalement politique, l'[[ABAKO]], dont [[Joseph Kasavubu]] devint président en [[1954]]. Son rêve devint de rétablir l'ancien royaume [[Kongo]] de l'époque [[Portugal|portugaise]], en fait celui des [[Bakongo]]. Cette tendance se durcit très vite et réclama bientôt l'indépendance immédiate tout en demeurant fédéraliste lorsqu'il s'agit plus tard de discuter le problème du reste du Congo. Les évolués « d'en haut », venant de régions plus diversifiées et séduits par le « plan de 30 ans pour l'émancipation de l'[[Afrique]] » du Professeur [[belgique|belge]] [[Van Bilsen]], publié en [[1956]], étaient aussi désireux de maintenir le grand Congo unitaire. Leur manifeste dans ce sens publié le [[1er juillet|1{{er}} juillet]] [[1956]] fut vigoureusement combattu par l'[[ABAKO]] dès son assemblée générale du [[23 août]] [[1956]]. Le plan de 30 ans est déclaré utopique : « la nationalisation des grandes compagnies vivrières et agricoles comme des parastataux est souhaitable. Puisque l'heure est venue, il faut accorder aujourd'hui même l'indépendance immédiate ! »
 La [[Belgique]], qui croyait à la progressivité de la transition vers l'[[indépendance]] organisa les premières [[élection]]s à l'échelon communal, limitées aux grandes villes en [[1957]]. L'ABAKO triompha inévitablement à Léopoldville et cela impressionna certains unitaristes, tel [[Patrice Lumumba]], un [[Tetela]] du [[Kasaï]], intelligent et idéaliste, qui ne tarda pas à fonder son propre « mouvement national congolais » [[MNC-Lumumba]], plus revendicatif que celui du [[MNC-Kalondji]], [[Kalondji]] étant aussi un Kasaïen unitariste. Ces jeunes rivalités politiques confrontées aux structures tribales compliquées du Congo allaient former un mélange détonant qui détruirait au bout de cinq années la première démocratie parlementaire congolaise. On ne peut que rappeler ici quelques épisodes saillants :
