/* État Indépendant du Congo */

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -7,16 +7,16 @@ Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale y
 
 Kasi soki na buku ekolo ya Afrika eye eleki na maboko ya mindele elakisi lokola ekolo ya poto, na mibeko mpe na misala ya mbulamatari, solo ezalaki kokambama lokola eloko ya moto moko. 
 
-== État Indépendant du Congo ==
+== État Indépendant du Congo (Ekolo ya Bonsomi ya Kongo)==
 Mapango ma ekolo Kongó esalami na bokakoli elongo na mindele miye basilaki kozwa ô kati, mabele manene. 
 Ya solo, likambo lya frontière ya Kongó esengi kotambola ekolo mobimba mpe kokamba bato na bokasi mpe esengaki kozwa bandeko ya miyindo. 
 
 Bitumba ekotaki kati ya batekisi mino ya nzoku épai moyindo, épai alabo na bakondzi ya miyindo. Bolongi ya léta epesaki na [[Belgica]] esengo enene. 
 
-Kasi sango ya malamu ya «État Indépendant du Congo» te na Belgica mpe na mboka mopaya. Sango ya monyokoli etali mosala ya ndembo ekomi na mpoto. Ntoma Léopold II atindi bato bya bikolo ndenge na ndenge mpona koyeba likambo liina. 
+Kasi sango ya malamu ya «État Indépendant du Congo» (to pe "Ekolo ya Bonsomi ya Kongo")te na Belgica mpe na mboka mopaya. Sango ya monyokoli etali mosala ya ndembo ekomi na mpoto. Ntoma Léopold II atindi bato bya bikolo ndenge na ndenge mpona koyeba likambo liina. 
 
 Matongi na nzoto ya mopaya ebangisi Belgica elingi kosukisa monyokoli. Yango wana ekolo Belgica, mokolo ya zomi na mitano sanza ya zomi na moko mobu koto na kama libwa na mwambe, ekamati bokondzi na etando ya ekolo État Indépendant du Congo. 
-Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele moko na Belgica. Na sima ya manso, bato babosani '''monyokoli''' mpe motungisi na tango ya ntoma Léopold II. Akomi ye moko «mokondzi malamu» mpe ekolo Kongó ekomi «ekolo moyindo ekambi mindele eye ekolakisa nzela». 
+Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele moko na Belgica. Na sima ya manso, bato babosani '''monyokoli''' mpe motungisi na tango ya ntoma Léopold II. Akomi ye moko «mokondzi malamu» mpe ekolo Kongó ekomi «ekolo moyindo ekambi mindele eye ekolakisa nzela».
 
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
