*Empty MediaWiki Message*

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -1,4 +1,4 @@
-[[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kongó ya Belgica, 1950]]
+[[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kongó ya Babelgi, 1950]]
 
 Voir aussi [[Ntangó ya banɔ́kɔ́]]
 
