*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,1 +1,4 @@
+Engumba Kinshasa ezali Engumba-mokonzi ya [[Kongo-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na bamilioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba Pari (Fransia). 
+
+{{ndambo}}
 {{BiteniKongoKinshasa}}
