*Empty MediaWiki Message*

--- a/Mbóka-mokonzi.mw
+++ b/Mbóka-mokonzi.mw
@@ -1,6 +1,13 @@
-'''''Engumba-mokonzi''''' ya ekolo moko, ezali engumba esika ekutanemi bulamatari ya [[ekolo]] ena. Ekoki mpe kosalema tee ba provinsi, to biteni ya ndenge na ndenge okati ya ekolo moko, bizala na bingumba mikonzi na bango.
+'''''Engumba-mokonzi''''' ya ekolo moko, ezali engumba esika ekutanemi bulamatari ya [[ekolo]] ena. 
+
+i.e: ''[[Kinshasa]]'' ezali engumba-mokonzi ya ''[[Kongo-Kinshasa]]''.
+
+Ekoki mpe kosalema tee ba provinsi, to biteni ya ndenge na ndenge okati ya ekolo moko, bizala na bingumba mikonzi na bango.
+
+i.e: [[Durban]] ezali engumba-mokonzi ya [[Kwazulu-Natal]], o ekolo ya Afrique du Sud.
 
 [[en:capital city]]
 [[fr:capitale]]
+[[es:capital]]
 
 {{ndambo}}
