--- a/Mbóka-mokonzi.mw
+++ b/Mbóka-mokonzi.mw
@@ -1,6 +1,6 @@
 '''''Engumba-mokonzi''''' ya ekolo moko, ezali engumba esika ekutanemi bulamatari ya [[ekolo]] ena. 
 
-i.e: ''[[Kinshasa]]'' ezali engumba-mokonzi ya ''[[Kongo-Kinshasa]]''.
+i.e: ''[[Kinshasa]]'' ezali engumba-mokonzi ya ''[[Kɔ́ngɔ-Kinshasa]]''.
 
 Ekoki mpe kosalema tee ba provinsi, to biteni ya ndenge na ndenge okati ya ekolo moko, bizala na bingumba mikonzi na bango.
 
