*Empty MediaWiki Message*

--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -1,5 +1,7 @@
 {{Ndámbo}}
 
+[[Molɔngɔ́ ya bikolo ya mokili]]
+
 === A ===
 [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
 
