*Empty MediaWiki Message*

--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -1,18 +1,13 @@
 {{Ndámbo}}
 
-[[Molɔngɔ́ ya bikolo ya mokili]]
-
 === A ===
 [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
 
 === B ===
-[[Bê Afríka]] (Santrafríka) - [[Bɛ́lɛjika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
-
-=== C ===
-[[Côte d'Ivoire]]
+[[Bê Afríka]] ([[Santrafríka]) - [[Bɛ́lɛjika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
 
 === D ===
-[[Djibouti]]
+[[Djibuti]]
 
 === F ===
 [[Falansia]]
@@ -21,34 +16,34 @@
 [[Gabon]] - [[Gambia]] - [[Ghana]] - [[Gine]] - [[Gine-Bisau]] - [[Gine-Ekwatorial]] (Mambénga)
 
 === H ===
-[[Holanda]]
+[[Holanda]] (Bikolo ya Se)
 
 === I ===
 [[India]] - [[Ingɛlɛ́tɛlɛ]]
 
 === K ===
-[[Kamerun]] - [[Kenya]] - [[Kɔ́ngɔ-Brazzaville]] (Congo-Brazzaville) - [[Kɔ́ngɔ-Kinshasa]]
+[[Kamerun]] - [[Kenya]] - [[Komori]] - [[Kɔ́ngɔ-Brazzaville]] - [[Kɔ́ngɔ-Kinshasa]] - [[Kotdivuar]] (Cote d'ivoire)
 
 === L ===
-[[Liberia]] - [[Luksamburg]]
+[[Liberia]] - [[Luksambur]]
 
 === M ===
-[[Malawi]] - [[Mali]] - [[Moritani]] (Mauritanie) - [[Mozambiki]]
+[[Malawi]] - [[Mali]] - [[Moritani]] - [[Mozambiki]]
 
 === N ===
 [[Namibia]] - [[Niger]] - [[Nijeria]]
 
 === P ===
-[[Purtugal]]
+[[Pulutugal]]
 
 === R ===
 [[Rwanda]]
 
 === S ===
-[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seychelles]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]]
+[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seyshel]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]]
 
 === T ===
-[[Tchad]] - [[Togo]] - [[Tunisia]]
+[[Tshad]] - [[Togo]] - [[Tunisia]]
 
 === U ===
 [[Uganda]]
