--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -43,7 +43,7 @@
 [[Rwanda]]
 
 === S ===
-[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seyshel]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]]
+[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seyshel]] - [[Sidafrika]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]]
 
 === T ===
 [[Tshad]] - [[Togo]] - [[Tunisia]]
