/* [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -262,7 +262,7 @@ Bakambi Bulamatari :
 * [[Category:Kongo Kinshasa]]
 <br clear="all"/>
 
-== [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] ==
+== Makasa-Web olibanda Wikipedia ==
 {{wikitravel|la République démocratique du Congo|République_démocratique_du_Congo}}
 * [http://www.stiopka.com/congoclic/congoclic.html Carte du Congo (1958)]
 * [http://www.amnestyinternational.be/doc/rubrique44.html Informations d'Amnesty International]
