*Empty MediaWiki Message*

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,1 +1,21 @@
-{{Infobox Ekolo}}
+[[Image:Congo_democratic_flag_large.png|right|thumb|188px|[[Image:FIAV_63.png]] Flag ratio: 2:3]]
+'''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[1997]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
+
+[[Image:Zaire_flag.gif|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]] (1971-1997)]]
+
+[[Image:Congo democratic flag large 1963-1971.png|right|thumb|188px|Bɛndɛ́lɛ na 1963-1971]]
+
+{{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
+
+==External link==
+*{{FOTW|id=cd|title=Democratic Republic of the Congo}}
+
+[[Category:Democratic Republic of the Congo]]
+[[Category:National flags|Congo, Democratic Republic of]]
+
+[[de:Flagge der Demokratischen Republik Kongo]]
+[[he:&#1491;&#1490;&#1500; &#1492;&#1512;&#1508;&#1493;&#1489;&#1500;&#1497;&#1511;&#1492; &#1492;&#1491;&#1502;&#1493;&#1511;&#1512;&#1496;&#1497;&#1514; &#1513;&#1500; &#1511;&#1493;&#1504;&#1490;&#1493;]]
+[[it:Bandiera della Repubblica Democratica del Congo]]
+[[sv:Demokratiska republiken Kongos flagga]]
+[[fr:Drapeau de la Republique Democratique du Congo]]
+[[pt:Bandeira da República Democrática do Congo]]
