*Empty MediaWiki Message*

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -7,11 +7,9 @@
 
 {{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
 
-==External link==
-*{{FOTW|id=cd|title=Democratic Republic of the Congo}}
 
-[[Category:Democratic Republic of the Congo]]
-[[Category:National flags|Congo, Democratic Republic of]]
+[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Ba Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
 [[he:&#1491;&#1490;&#1500; &#1492;&#1512;&#1508;&#1493;&#1489;&#1500;&#1497;&#1511;&#1492; &#1492;&#1491;&#1502;&#1493;&#1511;&#1512;&#1496;&#1497;&#1514; &#1513;&#1500; &#1511;&#1493;&#1504;&#1490;&#1493;]]
