*Empty MediaWiki Message*

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,4 +1,4 @@
-[[Image:Congo_democratic_flag_large.png|right|thumb|188px|[[Image:FIAV_63.png]] Flag ratio: 2:3]]
+[[Image:Congo_democratic_flag_large.png|right|thumb|188px|[[Image:Congo_democratic_flag_300.png]] Flag ratio: 2:3]]
 '''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[1997]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
 
 [[Image:Zaire_flag.gif|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]] (1971-1997)]]
