*Empty MediaWiki Message*

--- a/Lokótá_ya_Lɛ́ta.mw
+++ b/Lokótá_ya_Lɛ́ta.mw
@@ -1,6 +1,6 @@
 '''Lokótá ya Leta''' ezali lokóta oyo leta (to mpe [[bulamatari]]) ya [[esé]] (to mpe [[ekolo]]) moko, aponi pona kosalela na ba buku, mpe na malobi makonzi naye. Ezalaka mpe mingni-mingi lokótá oyo esalelamaka pona kotangisa na kelasi ya bana-ekolo ina.
 
-(i.e: lifalansé ezali moko nakati ya nkotá mibale ya leta ya [[Kanada]])
+(i.e: [[lifalansé]] ezali moko nakati ya nkotá mibale ya leta ya [[Kanada]])
 
 
 [[Category:Nkotá ya mokili]]
