*Empty MediaWiki Message*

--- a/Lokótá_ya_Lɛ́ta.mw
+++ b/Lokótá_ya_Lɛ́ta.mw
@@ -2,6 +2,7 @@
 
 (i.e: [[lifalansé]] ezali moko nakati ya nkotá mibale ya leta ya [[Kanada]])
 
+[[Molongo ya nkotá ya leta mokili]]
 
 [[Category:Nkotá ya mokili]]
 
