*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,4 +1,55 @@
-Engumba Kinshasa ezali Engumba-mokonzi ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na bamilioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]). 
+<div style="float:right">[[image:DCongoKinshasa.png]]</div>
+
+'''Engumba Kinshasa''' (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]), mpe moko okati ya bingumba minene koleka ya Afrika osé ya Sahara. 
+
+==Geography==
+[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kongo, Avrili 2003]]
+
+Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
+
+It is located along the southern bank of the [[Congo River]], directly opposite the city of [[Brazzaville]], capital of the [[Republic of the Congo]]. Kinshasa is located at 4&deg;16' South, 15&deg;17' East (-4.2667, 15.28333).
+
+Major areas of the city include the [[Cité de l'OUA]], home to the [[Government of the Democratic Republic of Congo]], [[Zone de Matonge]], known internationally for its [[nightlife]], and the residential area of [[Gombe]].  The city has a major [[river port]] at [[Beach Ngobila]] with [[ferry|ferries]] to Brazzaville and [[Bangui]], a [[railway]] to [[Matadi]] and [[N'Djili Airport]].
+
+Notable features of the city include the [[SOZACOM Building]] and [[Hotel Memling]] [[skyscraper]]s, the central [[market]], the [[Kinshasa Museum]] and the [[Kinshasa Fine Arts Academy]].  The [[Boulevard du 30 Juin]] links the areas of the city together.
+
+==Historia==
+The city was founded as a trading post by [[Henry Morton Stanley]] in [[1881]] and named Léopoldville in honor of King [[Leopold II of Belgium|Léopold II of Belgium]], who ruled the vast territory that is now the Democratic Republic of the Congo. The post flourished as the first navigable port along the Congo River above [[Livingstone Falls]]: at first, all goods arriving at Léopoldville from the interior would have to be carried by porter to the port of [[Matadi]] along the coast. The completion of a railroad in [[1898]] provided a viable means of transportation along the river's lower reaches and sparked the rapid development of Léopoldville. By 1920, the city was elevated to capital of the Belgian Congo, replacing the seaside town of [[Boma]].
+
+[[Image:ISS007-E-6305.jpg|350px|thumb|right|Image of Kinshasa and Brazzaville, taken by NASA]]
+In [[1965]] [[Mobutu Sese Seko]] seized power in the Congo in his second coup and initiated a policy of "Africanizing" the names of people and places in the country. In [[1966]] Léopoldville was renamed Kinshasa for a village that once stood near the site. The city grew rapidly under Mobutu, drawing people from across the country who came in search of their fortunes or to escape ethnic strife elsewhere. This inevitably brought about a change to the city's ethnic and linguistic composition as well. Although it is situated in territory that traditionally belongs to the [[Bakongo]] people, the ''lingua franca'' in Kinshasa today is not [[Kongo language|Kikongo]] but [[Lingala]].
+
+Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism and the civil war that led to his downfall. Nevertheless, it is still a major cultural and intellectual center (by Central African standards), with a flourishing community of musicians and artists. It is also the country's major industrial center, processing many of the natural products brought from the interior. The city has recently had to fend off rioting soldiers who were protesting the government's inability to pay them.
+
+==Media==
+Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.
+
+== Makasa-web olibanda Wikipedia ==
+* [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
+
+
+==See also==
+*[[List of television stations in Africa]]
+
+{{Democratic Republic of the Congo}}
+
+[[Category:Bingumba mikonzi ya Afrika]]
+[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Democratiki]]
+[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Democratiki]]
+
+[[de:Kinshasa]]
+[[es:Kinshasa]]
+[[fr:Kinshasa]]
+[[he:&#1511;&#1497;&#1504;&#1513;&#1488;&#1505;&#1492;]]
+[[nl:Kinshasa]]
+[[ja:&#12461;&#12531;&#12471;&#12515;&#12469;]]
+[[no:Kinshasa]]
+[[os:&#1050;&#1080;&#1085;&#1096;&#1072;&#1089;æ]]
+[[pl:Kinszasa]]
+[[pt:Kinshasa]]
+[[ru:&#1050;&#1080;&#1085;&#1096;&#1072;&#1089;&#1072;]]
+[[fi:Kinshasa]]
+[[sv:Kinshasa]]
 
 {{ndambo}}
 {{BiteniKongoKinshasa}}
