--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -32,8 +32,8 @@ Kinshasa is home to a large number of radio and TV stations. The National TV is 
 *[[List of television stations in Africa]]
 
 [[Category:Bingumba mikonzi ya Afrika]]
-[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Democratiki]]
-[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Democratiki]]
+[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[de:Kinshasa]]
 [[es:Kinshasa]]
