--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -1,3 +1,5 @@
 <div style="float:right">[[image:DCongoBandundu.png]]</div>
 
 {{BiteniKongoKinshasa}}
+[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
