--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -2,7 +2,7 @@
 
 '''Engumba Kinshasa''' (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]), mpe moko okati ya bingumba minene koleka ya Afrika osé ya Sahara. 
 
-==Geography==
+==Jyografi==
 [[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kongo, Avrili 2003]]
 
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
@@ -28,8 +28,8 @@ Kinshasa is home to a large number of radio and TV stations. The National TV is 
 * [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
 
 
-==See also==
-*[[List of television stations in Africa]]
+==Tala mpe==
+*[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[Category:Bingumba mikonzi ya Afrika]]
 [[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
