--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -3,7 +3,7 @@
 '''Engumba Kinshasa''' (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]), mpe moko okati ya bingumba minene koleka ya Afrika osé ya Sahara. 
 
 ==Jyografi==
-[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kongo, Avrili 2003]]
+[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kinshasa, Kongo, Avrili 2003]]
 
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
 
