*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,6 +1,6 @@
 <div style="float:right">[[image:DCongoKinshasa.png]]</div>
 
-'''Engumba Kinshasa''' (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]), mpe moko okati ya bingumba minene koleka ya Afrika osé ya Sahara. 
+Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kínshàsa'' - (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe provinsi ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Fransia]]), mpe ezali okati ya bingumba minene koleka ya Afrika o sé ya Sahara. 
 
 ==Jyografi==
 [[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kinshasa, Kongo, Avrili 2003]]
