*Empty MediaWiki Message*

--- a/Kasai_ya_Límbe.mw
+++ b/Kasai_ya_Límbe.mw
@@ -1,1 +1,3 @@
 {{BiteniKongoKinshasa}}
+[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
