--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -16,7 +16,7 @@ Notable features of the city include the [[SOZACOM Building]] and [[Hotel Memlin
 ==Historia==
 The city was founded as a trading post by [[Henry Morton Stanley]] in [[1881]] and named Léopoldville in honor of King [[Leopold II of Belgium|Léopold II of Belgium]], who ruled the vast territory that is now the Democratic Republic of the Congo. The post flourished as the first navigable port along the Congo River above [[Livingstone Falls]]: at first, all goods arriving at Léopoldville from the interior would have to be carried by porter to the port of [[Matadi]] along the coast. The completion of a railroad in [[1898]] provided a viable means of transportation along the river's lower reaches and sparked the rapid development of Léopoldville. By 1920, the city was elevated to capital of the Belgian Congo, replacing the seaside town of [[Boma]].
 
-[[Image:ISS007-E-6305.jpg|350px|thumb|right|Image of Kinshasa and Brazzaville, taken by NASA]]
+[[Image:Brazzaville_ISS007-E-6305.jpg|350px|thumb|right|Image of Kinshasa and Brazzaville, taken by NASA]]
 In [[1965]] [[Mobutu Sese Seko]] seized power in the Congo in his second coup and initiated a policy of "Africanizing" the names of people and places in the country. In [[1966]] Léopoldville was renamed Kinshasa for a village that once stood near the site. The city grew rapidly under Mobutu, drawing people from across the country who came in search of their fortunes or to escape ethnic strife elsewhere. This inevitably brought about a change to the city's ethnic and linguistic composition as well. Although it is situated in territory that traditionally belongs to the [[Bakongo]] people, the ''lingua franca'' in Kinshasa today is not [[Kongo language|Kikongo]] but [[Lingala]].
 
 Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism and the civil war that led to his downfall. Nevertheless, it is still a major cultural and intellectual center (by Central African standards), with a flourishing community of musicians and artists. It is also the country's major industrial center, processing many of the natural products brought from the interior. The city has recently had to fend off rioting soldiers who were protesting the government's inability to pay them.
