*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -3,7 +3,7 @@ The '''Swiss Confederation''' or '''Switzerland''' is a landlocked federal state
 
 ''Confœderatio Helvetica'' (CH), the [[Latin]] version of the official name, avoids choosing one of the four official languages. The abbreviation is similarly used; for example, it is used as Switzerland's [[country code top-level domain|ccTLD]], [[.ch]].
 
-{{Infobox_Country|
+{{Infobox_country|
 common_name 		= Switzerland |
 native_name 		= Schweizerische Eidgenossenschaft<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun Svizra<br>Confœderatio Helvetica|
 image_flag 		= Switzerland flag large.png |
