--- a/Swisi.mw
+++ b/Swisi.mw
@@ -63,7 +63,7 @@ Switzerland proclaimed neutrality in [[World War I]] and was not involved milita
 Women were granted the right to vote in the first cantons in [[1959]], at the federal level in [[1971]], in the last canton only in [[1990]]. In [[1979]], parts of the canton of [[Berne]] attained independence, forming the new [[canton of Jura]]. On April 18, [[1999]] the Swiss population and the cantons voted in favor of a completely revised federal [[constitution]].
 
 In [[2002]] Switzerland became a full member of the [[United Nations]], leaving the [[Vatican]] as the last widely recognized state without full UN membership. Switzerland is not a member state of the [[EU]] but applied for membership therein in May 1992. Switzerland has not advanced this application since the rejection, by referendum, of the [[European Economic Area]] in December 1992.   However, Swiss law is gradually being adjusted to that of the EU and the government has signed a number of [[bilateral agreements]] with the European Union. Switzerland (together with [[Liechtenstein]]) has been surrounded by the EU since [[Austria|Austria's]] membership in [[1995]]. On June 5, [[2005]], Swiss voters agreed, by a 55% majority, to join the [[Schengen treaty]], a result that was welcomed by EU commentators as a sign of goodwill by a Switzerland that is traditionally perceived as isolationist.
-[[Image:Carte suisse2.png|thumb|310px|right|Swisi]]
+[[Image:Carte suisse2.png|thumb|310px|left|Swisi]]
 
 == Politiki ==
 ''Main article: [[Politiki ya Swisi]]''
