*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -5,8 +5,8 @@ The '''Swiss Confederation''' or '''Switzerland''' is a landlocked federal state
 {{Infobox_country|
 common_name 		= Switzerland |
 native_name 		= Schweizerische Eidgenossenschaft<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun Svizra<br>Confœderatio Helvetica|
-image_flag 		= Switzerland flag large.png |
-image_coat 		= Switzerland_CoA.png |
+image_flag 		= Switzerland flag 300.png |
+image_coat 		= BlasonSUISSE.PNG |
 image_map 		= LocationSwitzerland.png |
 national_motto 		= Unus pro omnibus, omnes pro uno<br>(English: One for all, all for one)|
 national_anthem 	= [[Swiss Psalm]] |
