--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -133,7 +133,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Biteni bya Ekolo Kongo Demokratiki ==
+== Biteni bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Article de fond : [[Biteni bya Kongo Kinshasa]]''
 
