/* Biteni bya Repubiliki ya Kɔ́ngɔ Demokratiki */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -135,8 +135,9 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 == Biteni bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article de fond : [[Biteni bya Kongo Kinshasa]]''
+''Article ya molayi : [[Biteni bya Kongo Kinshasa]]''
 
+Ba Provinsi ya Kɔ́ngɔ-Kinshasa 
 # [[Bandundu]]
 # [[Bas-Congo]])
 # [[Équateur (province)|Équateur]]
