*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -182,8 +182,8 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
-== Politique ==
-''Article détaillé : [[Politique de la République démocratique du Congo]]''
+== Politiki ==
+''Article ya molayi : [[Politiki bya ya Kongo Kinshasa ]]''
 
 Présidents :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
