--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -133,9 +133,11 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Ba Provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
+== Ba Provinsi bya Kɔ́ngɔ Kinshasa ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article de fond : [[Ba Provinsi bya Kongo Kinshasa]]''
+''Article ya molayi : [[Ba Provinsi bya Kɔ́ngɔ Kinshasa]]''
+
+Biteni mikonzi bya Kɔ́ngɔ Kinshasa mibengami [[Provinsi]]. Ba provinsi ya Kɔ́ngɔ Kinshasa bazali:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
