*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -20,7 +20,7 @@
 |-----
 | [[Engumba mokonzi]] || [[Kinshasa]]
 |-----
-| [[Kongo Demokratiki (Tata-mokonzi)|Mokambi-ekolo]] || [[Joseph Kabila]]
+| [[Mokambi Ekolo Kongo Kinshasa|Mokambi-ekolo]] || [[Joseph Kabila]]
 |-----
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Molɔngɔ́ ya bisé na etando|Classé 12]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
